local-fmt/tests/ui/gen_static_message/access_to_not_const.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> tests/ui/gen_static_message/access_to_not_const.rs:5:33
  |
5 |     const _: StaticMessage<1> = gen_static_message!("Hello! {world}");
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ non-constant value
  |
  = note: this error originates in the macro `gen_static_message` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `let` instead of `const`
  |
5 |     let _: StaticMessage<1> = gen_static_message!("Hello! {world}");
  |     ~~~

error[E0308]: mismatched types
 --> tests/ui/gen_static_message/access_to_not_const.rs:5:33
  |
5 |     const _: StaticMessage<1> = gen_static_message!("Hello! {world}");
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `1`, found `0`
  |
  = note: expected struct `RefMessage<'static, 1>`
             found struct `RefMessage<'_, 0>`
  = note: this error originates in the macro `gen_static_message` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `world`
 --> tests/ui/gen_static_message/access_to_not_const.rs:4:9
  |
4 |     let world = "world";
  |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_world`
  |
  = note: `#[warn(unused_variables)]` on by default
